# cognikernel

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: benchmark.md
research/encoder_paper/: PAPER.md  encoder_memory_paper.md  supersession_algorithms.md
scripts/: _compare_sandboxes.py  _count_tool_calls.py  _debug_skeleton.py  _extract_symbols.py  _j2_migrate_all.py  _j2_verify_block.py  _j5_clean_test_residue.py  _j5_meta_scan.py  _projection_v2.py  _show_state.py  assemble_train_corpus.py  bench_honor.py  build_cot_sft.py  build_model_eval.py  build_p2_data.py  calibrate_ck1.py  calibrate_salience_head.py  check_db.py  cognikernel_hook.py  cognikernel_posttool_grep_hook.py  cognikernel_posttool_hook.py  cognikernel_posttool_read_hook.py  cognikernel_pretool_hook.py  cognikernel_session_start_hook.py  collect_telemetry.py  count_tool_calls.py  eval_extraction.py  eval_ingest_cost.py  eval_retention.py  eval_supersession.py  export_setfit_onnx.py  export_xenc_onnx.py  find_injection_block.py  gen_context_corpus.py  gen_supersession_pairs.py  gen_synthetic_corpus.py  gen_training_data.py  gen_twin_corpus.py  h7_bypass.py  humanize_corpus.py  (+29 more)
src/cognikernel/: __init__.py  __main__.py  config.py  model.py
src/cognikernel/compression/: __init__.py  greedy.py  recency.py  token_count.py  weights.py
src/cognikernel/delta/: __init__.py  cascade.py  decay.py  merge.py  supersede.py  supersede_xenc.py
src/cognikernel/embedding/: __init__.py  backfill.py  input.py  model.py  retrieval.py
src/cognikernel/extraction/: __init__.py  classifier.py  decision_key.py  file_mentions.py  git_augment.py  hashing.py  head_input.py  jsonl_converter.py  normalize.py  patterns.py  pipeline.py  salience.py  salience_v2.py  sanitize.py  schema_decisions.py  transcript.py  trie.py  triple.py  windowing.py
src/cognikernel/injection/: __init__.py  ckl.py  fallback.py  ordering.py  template.py
src/cognikernel/integration/: __init__.py  cli.py  codex_sync.py  health.py  hooks.py  lookup.py  mcp_server.py  query.py  resources.py  session.py  session_start.py
src/cognikernel/retrieval/: __init__.py  hybrid.py
src/cognikernel/storage/: __init__.py  connection.py  consolidate.py  denied_reads.py  events.py  evidence.py  fts.py  jobs.py  migrations.py  projections.py  read_cache.py  sections.py  symbol_files.py
src/cognikernel/symbols/: extractor.py  projection.py  render.py  store.py
src/cognikernel/telemetry/: bypass.py  ingest.py  render_cost.py
src/cognikernel/utils/: __init__.py  decision_key.py  subject.py
src/memlora/: __init__.py  __main__.py  config.py  model.py
src/memlora/compression/: __init__.py  centrality.py  greedy.py  token_count.py  weights.py
src/memlora/delta/: __init__.py  cascade.py  decay.py  merge.py  supersede.py  supersede_xenc.py
src/memlora/embedding/: __init__.py  backfill.py  input.py  model.py  retrieval.py  store.py
src/memlora/extraction/: __init__.py  authority.py  classifier.py  codex_converter.py  decision_key.py  file_mentions.py  git_augment.py  hashing.py  llm_enrich.py  normalize.py  patterns.py  pipeline.py  salience.py  salience_v2.py  sanitize.py  schema_decisions.py  signals.py  tokenize.py  transcript.py  trie.py  triple.py  windowing.py
src/memlora/injection/: __init__.py  ckl.py  fallback.py  ordering.py  template.py
src/memlora/integration/: __init__.py  cli.py  codex_sync.py  health.py  hooks.py  lookup.py  mcp_server.py  query.py  resources.py  session.py  session_start.py  slash_extract.py
src/memlora/retrieval/: hybrid.py
src/memlora/storage/: __init__.py  connection.py  consolidate.py  cursors.py  enrichment_jobs.py  events.py  evidence.py  fts.py  grep_cache.py  jobs.py  migrations.py  projections.py  render_ledger.py  symbol_files.py
src/memlora/symbols/: extractor.py  projection.py  render.py  store.py
src/memlora/telemetry/: bypass.py  ingest.py  render_cost.py
src/memlora/utils/: __init__.py  decision_key.py  hashing.py  paths.py  subject.py
tests/: conftest.py  e2e_tier1_smoke.py
tests/eval/: test_supersession_precision.py
tests/fixtures/: codex_rollout_sample.jsonl  relay_s1_baseline_events.json  relay_s1_gold.json  salience_seed.jsonl  salience_train_generated.jsonl  salience_twins_generated.jsonl  supersession_pairs_generated.jsonl  supersession_pairs_gold.json
tests/fixtures/transcripts/: abandoned_approach.txt  constraints_bullets.txt  decision_basic.txt  decision_with_rationale.txt  mixed_roles.txt  with_code_block.txt
tests/integration/: test_pretool_strict_mode.py  test_session_start_hook.py
tests/integration/storage/: test_concurrent.py
tests/reliability/: conftest.py  test_codex_rollout.py  test_corrupt_evidence.py  test_crash_replay.py  test_worker_contention.py
tests/unit/: test_architecture_contracts.py  test_config_overlay.py
tests/unit/compression/: test_centrality.py  test_greedy.py  test_recency.py  test_token_count.py  test_weights.py
tests/unit/delta/: test_cascade.py  test_decay.py  test_merge.py  test_supersede.py
tests/unit/embedding/: test_backfill.py  test_input.py  test_model_loading.py  test_retrieval.py  test_store.py
tests/unit/extraction/: test_authority.py  test_classifier.py  test_co_capture.py  test_codex_converter.py  test_decision_key.py  test_extraction_relay_baseline.py  test_file_mentions.py  test_git_augment.py  test_hashing.py  test_llm_enrich.py  test_normalize.py  test_patterns.py  test_pipeline.py  test_sanitize.py  test_schema_decisions.py  test_tokenize.py  test_trie.py  test_triple.py  test_windowing.py
tests/unit/injection/: _render_smoke.py  test_ckl.py  test_fallback.py  test_ordering.py  test_pending_confirmation.py  test_section_budgets.py  test_template.py  test_tool_policy.py
tests/unit/integration/: test_cli_init.py  (+22 more)
(+48 files in other folders)
