[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memlora-edge"
version = "0.1.0"
description = "Structured session-state memory layer for AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "pyahocorasick>=2.0",
    "mcp>=1.0",
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=1.0",
]

# Optional local semantic layer (config.embedding_enabled). Off by default;
# supersession degrades to lexical matching when not installed.
[project.optional-dependencies]
embedding = ["fastembed>=0.3", "numpy>=1.24"]

[project.scripts]
memlora = "memlora.integration.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memlora"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "import-linter>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.importlinter]
root_packages = ["memlora"]

# Main pipeline: each layer may only import from layers below it.
[[tool.importlinter.contracts]]
name = "Main pipeline layers"
type = "layers"
layers = [
    "memlora.integration",
    "memlora.injection",
    "memlora.compression",
    "memlora.storage",
]

# Extraction feeds storage only — must not reach forward into the pipeline.
[[tool.importlinter.contracts]]
name = "Extraction forbidden upstream imports"
type = "forbidden"
source_modules = ["memlora.extraction"]
forbidden_modules = [
    "memlora.injection",
    "memlora.compression",
    "memlora.integration",
    "memlora.delta",
]

# Delta merge feeds storage only — must not reach forward or sideways.
[[tool.importlinter.contracts]]
name = "Delta forbidden upstream imports"
type = "forbidden"
source_modules = ["memlora.delta"]
forbidden_modules = [
    "memlora.injection",
    "memlora.compression",
    "memlora.integration",
    "memlora.extraction",
]

# Observability is read-only from stage code's perspective — stages import
# observability, observability does not import stage modules.
[[tool.importlinter.contracts]]
name = "Observability does not import stage modules"
type = "forbidden"
source_modules = ["memlora.observability"]
forbidden_modules = [
    "memlora.extraction",
    "memlora.compression",
    "memlora.injection",
    "memlora.delta",
    "memlora.integration",
]
