[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memlora-edge"
version = "0.1.0"
description = "Structured session-state memory layer for AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "pyahocorasick>=2.0",
    "mcp>=1.0",
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=1.0",
]

# Optional local semantic layer (config.embedding_enabled). Off by default;
# supersession degrades to lexical matching when not installed.
# `tokens`: exact cl100k_base token counting for the injection budgets; without
# it the single canonical counter uses the len/4 heuristic (see
# compression/token_count.py) — budgets are calibrated against the counter as
# deployed either way.
[project.optional-dependencies]
embedding = ["fastembed>=0.3", "numpy>=1.24"]
tokens = ["tiktoken>=0.5"]

[project.scripts]
memlora = "memlora.integration.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memlora"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "import-linter>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.importlinter]
root_packages = ["memlora"]

# Main pipeline: each layer may only import from layers below it.
[[tool.importlinter.contracts]]
name = "Main pipeline layers"
type = "layers"
# storage sits ABOVE compression: storage.projections ranks events using
# compression's centrality/weight math, and compression imports nothing from
# storage (the domain model Event lives in memlora.model, below both). The
# previous order (compression above storage) was aspirational and mis-declared —
# it was never enforced because the import-linter run aborted on a typo'd
# contract (see the removed observability note below).
layers = [
    "memlora.integration",
    "memlora.injection",
    "memlora.storage",
    "memlora.compression",
]

# Extraction feeds storage only — must not reach forward into the pipeline.
[[tool.importlinter.contracts]]
name = "Extraction forbidden upstream imports"
type = "forbidden"
source_modules = ["memlora.extraction"]
forbidden_modules = [
    "memlora.injection",
    "memlora.compression",
    "memlora.integration",
    "memlora.delta",
]

# Delta merge feeds storage only — must not reach forward or sideways.
[[tool.importlinter.contracts]]
name = "Delta forbidden upstream imports"
type = "forbidden"
source_modules = ["memlora.delta"]
forbidden_modules = [
    "memlora.injection",
    "memlora.compression",
    "memlora.integration",
    "memlora.extraction",
]

# NOTE (audit P2): there used to be an "Observability does not import stage
# modules" contract whose source_modules pointed at "memlora.observability" — a
# module that never existed. import-linter aborts the ENTIRE run when a contract
# names a missing module ("Module '...' does not exist."), so this typo silently
# disabled enforcement of every contract above. It was removed rather than
# retargeted: the real observer module is memlora.telemetry, and its purpose
# (render_cost.render_cost_report) is to invoke integration.session.render_state
# and measure the rendered block — telemetry legitimately depends on the
# integration + injection stages it observes, so a "telemetry imports no stage
# modules" boundary does not hold and was never enforced. The four contracts
# above (the layered pipeline + extraction/delta forbidden-upstream) are the real,
# maintained invariants; with the broken contract gone they are checked again.
